created getOneUser route
